--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header{
     top: 50%; /* Centraliza verticalmente */
     left: 50%; /* Centraliza horizontalmente */
     transform: translate(-50%, -50%); /* Ajusta a posição para o centro exato */
+    font-weight: 400;
 }
 
 header ul{
@@ -57,6 +58,25 @@ header ul li a{
 header ul li a:hover{
     background-color: #555;
 }
+
+.destaques h2{
+    margin-top: 4%;
+    text-align: center;
+    font-size: 26px;
+}
+
+.products{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 2%;
+}
+
+
+
+
+
+
 
 #descricao{
     margin: 2%;
