--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header{
     position: relative;
 }
 
+
 #info{
     color: #fff;
     padding: 1%;
@@ -30,6 +31,11 @@ header{
     left: 50%; /* Centraliza horizontalmente */
     transform: translate(-50%, -50%); /* Ajusta a posição para o centro exato */
     font-weight: 400;
+}
+#info p{
+    font-size: 19px;
+    margin: 0;
+    font-weight: 450;
 }
 
 header ul{
@@ -78,16 +84,37 @@ header ul li a:hover{
 
 #descricao{
     margin: 1%;
-    text-align: center;
+    text-align: justify;
     padding: 1%;
+}
+#descricao h3{
+    font-size: 28px;
+    margin-bottom: 10px; /* Reduz o espaço abaixo do título */
+    text-align: center;
+    
 }
 #descricao p{
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.25;
     
 }
-#descricao img{
+
+#descricao .card {
+    width: 100%; /* Ajusta a largura do card */
+    max-width: 1920px; /* Define um limite máximo para a largura */
+    height: auto; /* Ajusta a altura automaticamente */
+    margin: 0 auto; /* Centraliza o card horizontalmente */
+}
+
+#descricao .card-img {
+    height: 85vh; /* Define a altura da imagem */
+    object-fit: cover; /* Garante que a imagem se ajuste sem distorção */
     opacity: 0.5; /* Opacidade de 50% */
+}
+
+#descricao .card-img-overlay {
+    padding: 20px; /* Ajusta o espaçamento interno do conteúdo */
+    /*Criar @media para usar width: 50%; /* Ajusta a largura do conteúdo */
 }
 
 
