--- a/style.css
+++ b/style.css
@@ -78,8 +78,10 @@ header ul li a:hover{
     margin: 2%;
 }
 
-
-
+/* Padroniza o tamanho das imagens */
+.products img{
+    height: 250px;
+}
 
 
 #descricao{
