--- a/style.css
+++ b/style.css
@@ -275,7 +275,10 @@ address{
     .navbar-collapse {
         background-color: rgb(255, 255, 255); 
         font-weight: 700;
-
+    }
+    #descricao p{
+        font-size: 16px;
+        line-height: 1.25;
     }
     
     
