--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,31 +1,24 @@
- <nav class="navbar navbar-expand-lg bg-transparent text-white">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-expand-lg bg-transparent text-white">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="index.html">HOME</a>
-                </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/">HOME</a>  </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./pages/estoques.html">ESTOQUE</a>
-                </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/estoques">ESTOQUE</a> </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="#descricao">SOBRE</a>
-                </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/#descricao">SOBRE</a> </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="#location">LOCALIZAÇÃO</a>
-                </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/#location">LOCALIZAÇÃO</a> </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./pages/contato.html">CONTATO</a>
-                </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/contato">CONTATO</a> </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./login.html">LOGIN</a>
-                </li>
-
-              </ul>
-            </div>
-          </div>
-        </nav>
+                    <a class="nav-link active text-white" aria-current="page" href="/login">LOGIN</a>   </li>
+            </ul>
+        </div>
+    </div>
+</nav>
