--- a/views/estoques.ejs
+++ b/views/estoques.ejs
@@ -1,50 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estoques Automobile</title>
-    <link rel="shortcut icon" href="/./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/./js/scripts.js" defer></script>
-</head>
-<body>
+<%- include('partials/header') %> 
     <header id="header-estoque">
         <section id="estoque-info">
             <h1>ESTOQUE</h1>
         </section>
         
-        <nav class="navbar navbar-expand-lg bg-transparent text-white">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/./index.html">HOME</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/./pages/estoques.html">ESTOQUE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/./index.html#descricao">SOBRE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#location">LOCALIZAÇÃO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/./pages/contato.html">CONTATO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/./login.html">LOGIN</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+        <%- include('partials/navbar') %>
 
     </header>
     
@@ -381,16 +341,4 @@
             </div> <!-- Fecha .products -->
         </section>
     </main>
-        
-    <footer>
-        <section id="location">
-            <address>
-                <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
-                <p>Telefone: (11) 1234-5678</p>
-            </address>
-        </section>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+<%- include('partials/footer') %>
