--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -12,7 +12,7 @@
         
         <section id="contato"> 
               <h2>Contato</h2>
-              <form id="form">
+              <form id="form" method="POST" action="/enviar-contato">
               <div class="mb-3">
                   <label for="name" class="form-label">Nome</label>
                   <input type="text" class="form-control" id="name" placeholder="nome">
