Implement proposal handling with routes and form processing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                                     <!--Criar um modal com formulário no futuro-->
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
@@ -248,7 +248,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    <a href="./pages/proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                    <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                 </div>
                             </div>
                         </div>
