--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,10 +34,10 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            // Simulação de login (substitua por lógica real)
+            // Simulação de login 
             if (username === "teste@teste" && password === "teste") {
                 alert("Login bem-sucedido!");
-                window.location.href = "index.html"; // Redireciona para a página principal
+                window.location.href = "/"; // Redireciona para a página principal
             } else {
                 alert("Usuário ou senha inválidos!");
             }
