--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -29,22 +29,22 @@
               <form action="/contato/enviar" id="form" method="POST">
               <div class="mb-3">
                   <label for="name" class="form-label">Nome</label>
-                  <input type="text" class="form-control" id="name" placeholder="nome" required>
+                  <input type="text" class="form-control" id="name" placeholder="nome" name="name" required>
               </div>
   
               <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="email@exemplo.com" required>
+                  <input type="email" class="form-control" id="email" placeholder="email@exemplo.com" name="email" required>
               </div>
 
               <div class="mb-3">
                 <label for="telefone" class="form-label">Telefone</label>
-                <input type="text" class="form-control" id="telefone" placeholder="119XXXXYYYY" maxlength="11" required>
+                <input type="text" class="form-control" id="telefone" placeholder="119XXXXYYYY" name="telefone" maxlength="11" required>
               </div>
   
               <div class="mb-3">
                 <label for="message" class="form-label">Mensagem</label>
-                <textarea name="message" class="form-control" id="message" rows="3" required></textarea>
+                <textarea name="message" class="form-control" id="message" rows="3" name="message" required></textarea>
               </div> 
 
               <div class="col-12" style="text-align: center; margin-bottom: 15px;">
