--- a/views/proposta.ejs
+++ b/views/proposta.ejs
@@ -3,22 +3,35 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="card shadow-lg p-4" style="width: 100%; max-width: 400px;">
             <h1 class="text-center mb-4">Faça uma Proposta</h1>
-            <form id="proposta-form" method="POST" action="/enviar-proposta">
+            <%# Exibe a mensagem de ERRO, se existir %>
+            <% if (typeof mensagemErro !== 'undefined' && mensagemErro) { %>
+              <div class="alert alert-danger" role="alert">
+                <%= mensagemErro %>
+              </div>
+        <% } %>
+
+        <%# Exibe a mensagem de SUCESSO, se existir %>
+            <% if (typeof mensagemSucesso !== 'undefined' && mensagemSucesso) { %>
+              <div class="alert alert-success" role="alert">
+                <%= mensagemSucesso %>
+              </div>
+        <% } %>
+            <form action="/proposta/enviar" method="POST" id="proposta-form">
                 <div class="mb-3">
                     <label for="name" class="form-label">Nome</label>
-                    <input type="text" id="name" class="form-control" placeholder="Digite seu nome" required>
+                    <input type="text" id="name" class="form-control" placeholder="Digite seu nome" name="name" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" class="form-control" placeholder="Digite seu email" required>
+                    <input type="email" id="email" class="form-control" placeholder="Digite seu email" name="email" required>
                 </div>
                 <div class="mb-3">
                     <label for="telefone" class="form-label">Telefone</label>
-                    <input type="text" id="telefone" class="form-control" placeholder="119XXXXYYYY" required maxlength="11">
+                    <input type="text" id="telefone" class="form-control" placeholder="119XXXXYYYY" name="telefone" required maxlength="11">
                 </div>
                 <div class="mb-3">
                     <label for="cpf" class="form-label">CPF</label>
-                    <input type="text" class="form-control" id="cpf" placeholder="12345678910" required maxlength="14">
+                    <input type="text" class="form-control" id="cpf" placeholder="123.456.789-10" name="cpf" required maxlength="14">
                   </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Mensagem</label>
@@ -33,5 +46,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
