fix proposta routes

--- a/views/proposta.ejs
+++ b/views/proposta.ejs
@@ -16,10 +16,10 @@
                 <%= mensagemSucesso %>
               </div>
         <% } %>
-            <form action="/proposta/enviar" method="POST" id="proposta-form">
+            <form action="/proposta" method="POST" id="proposta-form">
                 <div class="mb-3">
                     <label for="name" class="form-label">Nome</label>
-                    <input type="text" id="name" class="form-control" placeholder="Digite seu nome" name="name" required>
+                    <input type="text" id="name" class="form-control" placeholder="Digite seu nome" name="nome" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
