--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,14 +23,14 @@
                         </span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/logout">Logout</a>
+                        <a class="nav-link" href="/logout">Logout</a>
                     </li>
                     <% } else { %>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/login">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/register">Cadastro</a>
+                        <a class="nav-link" href="/register">Cadastro</a>
                     </li>
                 <% } %>
             </ul>
