--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,25 +7,34 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/">HOME</a>  </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/">HOME</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/estoques">ESTOQUE</a> </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/estoques">ESTOQUE</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/#descricao">SOBRE</a> </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/#descricao">SOBRE</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/#location">LOCALIZAÇÃO</a> </li>
+                    <a class="nav-link active text-white" aria-current="page" href="/#location">LOCALIZAÇÃO</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/contato">CONTATO</a> </li>
-                <% if (locals.isAuthenticated) { %>
+                    <a class="nav-link active text-white" aria-current="page" href="/contato">CONTATO</a>
+                </li>
+
+                <% if (currentUser) { %>
+                    <!-- Se a variável currentUser existe (ou seja, se o utilizador está logado) -->
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href=""><span class="navbar-text active text-white"> 
-                        Olá, <%= locals.currentUser.name %>!
-                        </span></a>
+                        <span class="nav-link active text-white"> 
+                            Olá, <%= currentUser.name %>!
+                        </span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        
+                        <a class="nav-link" href="/api/auth/logout">Logout</a>
                     </li>
-                    <% } else { %>
+                <% } else { %>
+                    <!-- Se não houver utilizador logado, mostra os links de Login/Cadastro -->
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
