fix message login and register

--- a/views/proposta.ejs
+++ b/views/proposta.ejs
@@ -39,7 +39,7 @@
                   </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Mensagem</label>
-                    <textarea name="message" class="form-control" id="message" rows="3" required></textarea>
+                    <textarea name="mensagem" class="form-control" id="message" rows="3" required></textarea>
                 </div>
                 <div class="d-grid">
                     <button class="btn btn-primary" type="submit">Enviar</button>
