--- a/views/estoques.ejs
+++ b/views/estoques.ejs
@@ -49,7 +49,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                                         <!--Criar um modal com formulário no futuro-->
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -226,7 +226,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -261,7 +261,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -331,7 +331,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <a href="./proposta.html"><button type="button" class="btn btn-primary">Proposta</button></a>
+                                        <a href="/proposta"><button type="button" class="btn btn-primary">Proposta</button></a>
                                     </div>
                                 </div>
                             </div>
