--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,7 +16,7 @@
                     <a class="nav-link active text-white" aria-current="page" href="/#descricao">SOBRE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/#location">LOCALIZAÇÃO</a>
+                    <a class="nav-link active text-white" aria-current="page" href="/#footer">LOCALIZAÇÃO</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active text-white" aria-current="page" href="/contato">CONTATO</a>
