--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,43 @@
-<footer>
-  <section id="location">
-      <address>
-          <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
-          <p>Telefone: (11) 1234-5678</p>
-      </address>
-  </section>
+</main> <!-- Fecha a tag <main> aberta no header -->
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                <h5 class="text-uppercase">Automobile</h5>
+                <p>O seu próximo carro está aqui. Qualidade, confiança e as melhores condições do mercado.</p>
+                <div class="social-icons mt-4">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <h5 class="text-uppercase">Navegação</h5>
+                <ul class="list-unstyled mb-0 footer-links">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/estoques">Estoque</a></li>
+                    <li><a href="/#descricao">Sobre Nós</a></li>
+                    <li><a href="/contato">Contato</a></li>
+                </ul>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                <h5 class="text-uppercase">Contato</h5>
+                <ul class="list-unstyled mb-0">
+                    <li><p class="mb-1"><i class="fas fa-map-marker-alt me-2"></i>Rua Fictícia, 123 - Mogi Mirim, SP</p></li>
+                    <li><p class="mb-1"><i class="fas fa-phone me-2"></i>(19) 99999-8888</p></li>
+                    <li><p class="mb-0"><i class="fas fa-envelope me-2"></i>contato@automobile.com</p></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="text-center p-3 mt-4" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2025 Automobile: Todos os direitos reservados.
+    </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
